--- a/static/style.scss
+++ b/static/style.scss
@@ -1,5 +1,28 @@
-$background: #f5f5f5;
+// $background: #f5f5f5;
 
+// body {
+//   background: $background;
+// }
+
+html,
 body {
-  background: $background;
+	height: 100%;
+}
+
+.container {
+	height: 100%;
+  min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.main {
+  flex-direction: column;
+  display: flex;
+  flex-grow: 1;
+}
+
+.colorswitch-canvas-div {
+  // height: 100%;
+  flex-grow: 1;
 }
