--- a/static/style.scss
+++ b/static/style.scss
@@ -10,10 +10,31 @@ body {
 	flex-direction: column;
 }
 
-.colorswitch-canvas-div {
+#colorswitch-canvas-div {
   flex-grow: 1;
+
+  // display: flex;
+  // flex-flow: row wrap;
+
+	// height: 100%;
+  // min-height: 100%;
+	// display: flex;
+	// flex-direction: column;
+}
+
+#colorswitch-canvas-container {
+  // height: 100%;
+  // min-height: 100%;
+
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .im-canv {
   padding: 5px;
 }
+
+// .spacer {
+//   width: 10px;
+//   height: 10px;
+// }
