--- a/static/style.scss
+++ b/static/style.scss
@@ -1,8 +1,26 @@
+$accent-color: #57c4d0;
+
 html,
 body {
   height: 100%;
   font-family: sans-serif;
   text-rendering: optimizeLegibility;
+}
+
+.stage {
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  line-height: 60px;
+
+  -moz-border-radius: 30px; /* or 50% */
+  border-radius: 30px; /* or 50% */
+
+  background-color: $accent-color;
+  color: white;
+  text-align: center;
+  font-size: 2em;
+  margin: 10px;
 }
 
 .compute-modal {
@@ -32,7 +50,7 @@ body {
 }
 
 h1 {
-  border-bottom: 8px solid #57c4d0;
+  border-bottom: 8px solid $accent-color;
   text-align: center;
 }
 
