static site updates

--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{ page.title }}</title>
+        <title>🧪colorimetry.net - {{ page.title }}</title>
     </head>
     <body>
+    <h1>🧪colorimetry.net👩‍🔬</h1>
     <div>
       <h2>{{ page.title }}</h2>
       {{ page.content }}
