static site work

--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -10,5 +10,8 @@
       <h2>{{ page.title }}</h2>
       {{ page.content }}
     </div>
+    <div>
+      <a href="/about">About</a> | <a href="/app">App</a>
+    </div>
   </body>
 </html>
