--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -11,7 +11,7 @@
       {{ page.content }}
     </div>
     <div>
-      <a href="/about">About</a> | <a href="/app">App</a>
+      <a href="/about">About</a> | <a href="/app">App</a> | <a href="/impressum">Impressum</a> | <a href="/privacy">Privacy</a>
     </div>
   </body>
 </html>
