--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>🧪colorimetry.net - {{ page.title }}</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
     <h1>🧪colorimetry.net👩‍🔬</h1>
