--- a/site-base/style.scss
+++ b/site-base/style.scss
@@ -13,8 +13,10 @@ body {
   width: 60px;
   line-height: 60px;
 
-  -moz-border-radius: 30px; /* or 50% */
-  border-radius: 30px; /* or 50% */
+  -moz-border-radius: 30px;
+  /* or 50% */
+  border-radius: 30px;
+  /* or 50% */
 
   background-color: $accent-color;
   color: white;
@@ -24,7 +26,7 @@ body {
 }
 
 .compute-modal {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
@@ -55,25 +57,25 @@ h1 {
 }
 
 .spa-container {
-	height: 100%;
+  height: 100%;
   min-height: 100%;
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-#colorimetry-net-canvas-div {
+#hnb-app-canvas-div {
   flex-grow: 1;
 
   // display: flex;
   // flex-flow: row wrap;
 
-	// height: 100%;
+  // height: 100%;
   // min-height: 100%;
-	// display: flex;
-	// flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
 }
 
-#colorimetry-net-canvas-container {
+#hnb-app-canvas-container {
   // height: 100%;
   // min-height: 100%;
 
@@ -100,6 +102,7 @@ h1 {
   width: 64px;
   height: 64px;
 }
+
 .lds-ellipsis div {
   position: absolute;
   top: 27px;
@@ -109,42 +112,52 @@ h1 {
   background: white;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
+
 .lds-ellipsis div:nth-child(1) {
   left: 6px;
   animation: lds-ellipsis1 0.6s infinite;
 }
+
 .lds-ellipsis div:nth-child(2) {
   left: 6px;
   animation: lds-ellipsis2 0.6s infinite;
 }
+
 .lds-ellipsis div:nth-child(3) {
   left: 26px;
   animation: lds-ellipsis2 0.6s infinite;
 }
+
 .lds-ellipsis div:nth-child(4) {
   left: 45px;
   animation: lds-ellipsis3 0.6s infinite;
 }
+
 @keyframes lds-ellipsis1 {
   0% {
     transform: scale(0);
   }
+
   100% {
     transform: scale(1);
   }
 }
+
 @keyframes lds-ellipsis3 {
   0% {
     transform: scale(1);
   }
+
   100% {
     transform: scale(0);
   }
 }
+
 @keyframes lds-ellipsis2 {
   0% {
     transform: translate(0, 0);
   }
+
   100% {
     transform: translate(19px, 0);
   }
