--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -12,7 +12,7 @@
       {{ page.content }}
     </div>
     <div>
-      <a href="/about/">About</a> | <a href="/hnb-app/">ColorSwitch HNB</a> | <a href="/impressum/">Impressum</a> | <a href="/privacy/">Privacy</a>
+      <a href="/about/">About</a> | <a href="/hnb-app/">Color Stretch HNB</a> | <a href="/impressum/">Impressum</a> | <a href="/privacy/">Privacy</a>
     </div>
   </body>
 </html>
