update about page

--- a/site-base/style.scss
+++ b/site-base/style.scss
@@ -7,6 +7,11 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+.about-icon {
+  vertical-align: middle;
+  height: 2rem;
+}
+
 .stage {
   display: inline-block;
   height: 60px;
