show site revision at bottom of every page

--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -11,6 +11,7 @@
       <h2>{{ page.title }}</h2>
       {{ page.content }}
     </div>
+    <div class="git-rev">This is site revision <a href="https://github.com/colorimetry/colorimetry-net/commit/{{ site.data.metadata.git_rev }}">{{ site.data.metadata.git_rev }}</a>.</div>
     <div>
       <a href="/about/">About</a> | <a href="/hnb-app/">ColorSwitch HNB</a> | <a href="/impressum/">Impressum</a> | <a href="/privacy/">Privacy</a>
     </div>
