--- a/site-base/style.scss
+++ b/site-base/style.scss
@@ -12,6 +12,11 @@ body {
   height: 2rem;
 }
 
+.git-rev {
+  padding-top: 0.5em;
+  font-size: 0.8em;
+}
+
 .stage {
   display: inline-block;
   height: 60px;
