implement download button
This also implements a new component to handle display of image.

Fixes #3.

--- a/site-base/style.scss
+++ b/site-base/style.scss
@@ -98,8 +98,13 @@ h1 {
   flex-flow: row wrap;
 }
 
-.im-canv {
+.im-span {
   padding: 5px;
+}
+
+.im-btn {
+  margin: 0 auto; // auto left/right margins
+  display: block;
 }
 
 // .spacer {
