--- a/site-base/style.scss
+++ b/site-base/style.scss
@@ -108,8 +108,33 @@ h1 {
 }
 
 .im-btn {
-  margin: 0 auto; // auto left/right margins
+  margin: 2px auto; // auto left/right margins
   display: block;
+}
+
+.file-btn {
+  margin: 1em;
+}
+
+.btn {
+  background-color: $accent-color;
+  color: white;
+  border: none;
+  font-family: inherit;
+  font-size: 1em;
+  padding: 0.1em 1em;
+  cursor: pointer;
+
+  -moz-border-radius: 1em;
+  border-radius: 1em;
+
+  background-color: $accent-color;
+  color: white;
+  text-align: center;
+}
+
+input[type="file"] {
+  display: none;
 }
 
 // .spacer {
