--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -11,6 +11,7 @@
       <h2>{{ page.title }}</h2>
       {{ page.content }}
     </div>
+    <div class="sourcecode">Source code for this site is at <a href="https://github.com/colorimetry/colorimetry-net">github.com/colorimetry/colorimetry-net</a>.</div>
     <div>
       <a href="/about/">About</a> | <a href="/hnb-app/">HNB enhance</a> | <a href="/impressum/">Impressum</a> | <a href="/privacy/">Privacy</a> | <a href="https://www.netlify.com"><img class="about-icon" src="/images/netlify-callout-vertical-color-bg.svg" alt="Deploys by Netlify" /></a>
     </div>
