link to netlify deploys page

--- a/site-base/_layouts/default.liquid
+++ b/site-base/_layouts/default.liquid
@@ -13,7 +13,7 @@
     </div>
     <div class="sourcecode">Source code for this site is at <a href="https://github.com/colorimetry/colorimetry-net">github.com/colorimetry/colorimetry-net</a>.</div>
     <div>
-      <a href="/about/">About</a> | <a href="/hnb-app/">HNB enhance</a> | <a href="/impressum/">Impressum</a> | <a href="/privacy/">Privacy</a> | <a href="https://www.netlify.com"><img class="about-icon" src="/images/netlify-callout-vertical-color-bg.svg" alt="Deploys by Netlify" /></a>
+      <a href="/about/">About</a> | <a href="/hnb-app/">HNB enhance</a> | <a href="/impressum/">Impressum</a> | <a href="/privacy/">Privacy</a> | <a href="https://app.netlify.com/sites/colorimetry/deploys"><img class="about-icon" src="/images/netlify-callout-vertical-color-bg.svg" alt="Deploys by Netlify" /></a>
     </div>
   </body>
 </html>
